maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:120: error: not found: value indication
  if (minimum==indication(1))                                                                 {
               ^